--- a/Quinn-Website.html
+++ b/Quinn-Website.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Lieg tester</title>
 </head>
 <body>
 <h1>Quinn is F*king cool</h1>
